@@ -88,13 +88,6 @@ if (MASTER_PROJECT AND CMAKE_BUILD_TYPE MATCHES Debug)
              " -Wno-weak-vtables"
              " -Wno-exit-time-destructors"
              " -Wno-global-constructors")
-      CHECK_CXX_COMPILER_FLAG("-Wno-inconsistent-missing-destructor-override"
-                              W_MISSING_DTOR_OVERRIDE)
-      if (W_MISSING_DTOR_OVERRIDE)
-        string(CONCAT
-               WARN_FLAGS
-               " -Wno-inconsistent-missing-destructor-override")
-      endif()
     elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
       string(CONCAT
              WARN_FLAGS
